# ml-class-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docker/: README.md
docker/tesseract/: Dockerfile
docs/: file_structure.txt
docs/development/: README.md  loose_ends.md  phase_1_corpus_characterization.md  phase_2_preprocessing.md  phase_3_ocr_pipeline.md  phase_4_llm_validation.md  phase_5_analysis_report.md  roadmap.md
docs/guide/: guide.md  teammate_onboarding.md
docs/standards/: README.md  credential_handling_standard.md  documentation_standard.md  environment_standard.md  git_workflow_standard.md  logging_standard.md  python_code_standard.md  repo_layout_standard.md  (+1 more)
downloads/: Telugu-OCR-Project.html  Telugu-OCR-Project.qmd  announcement1.md  announcement2.md  announcement3.md  announcement4.md  announcement5.md  message_from_another_team.md
notebooks/: 01_corpus_characterization.ipynb  04_validation_calibration.py  README.md
reports/: README.md  corpus_characterization.html  corpus_characterization.qmd  corpus_characterization.tex  final_report.html  final_report.qmd  final_report.tex  presentation.html  presentation.qmd  presentation_script.md  references.bib
scripts/: README.md  build_ablation_figure.py  build_corpus_inventory.py  build_error_analysis.py  build_report_figures.py  download_dataset.py  package_submission.sh  run_fluency.py  run_ocr.py  run_preprocessing.py  run_tesseract.sh  score_ocr.py  select_eval_subset.py  setup_env.sh
src/: README.md
tests/: README.md
(+48 files in other folders)
