[project]
name = "ml-class-project"
version = "0.1.0"
description = "Telugu OCR pipeline using vision-capable LLMs (CSCI/DASC 6020 course project)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: cross-component test; may touch disk",
    "slow: takes more than 5 seconds; skip with -m 'not slow'",
    "api: calls a real external API (requires .env); skip with -m 'not api'",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"notebooks/**" = ["E402"]   # imports at top — notebooks set paths first
